--- a/Calculator/calculator.html
+++ b/Calculator/calculator.html
@@ -33,6 +33,6 @@
     <button data-number>0</button>
     <button data-equals class="span-two">=</button>
   </div>
-  <footer>Copyright © 2023 Sampreeth</footer>
+  <footer>Copyright © 2023 <a href="https://github.com/sampreeth4/calculator-The-Odin-Project">Sampreeth</a></footer>
 </body>
 </html>
